src/components/Ticket/Ticket.css
.ticket__cont {
  margin-bottom: 1rem;
}

.ticket__button:hover {
  cursor: pointer;
}

.ticket__button {
  display: flex;
  z-index: 1;
  padding: 1rem;
  border-radius: 30px;
  position: relative;
}

/* .ticket__button {
} */

.ticket--inactive {
  display: none;
}

.ticket {
  width: 100vw;
  height: 100vh;
  position: fixed;
  z-index: 1;
  background-color: var(--bg-20);
  color: var(--primary);
  display: flex;
  flex-direction: column;
  align-items: center;
}

.ticket__container {
  width: 480px;
  display: flex;
  flex-direction: column;
  margin: var(--margin-out);
}

.ticket__header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 80px;
  margin: 0 var(--margin-out);
}

.ticket__header-title {
  font-size: var(--size-title);
}

.ticket__top-close {
  font-size: 1.5rem;
  display: flex;
  font-weight: bold;
  cursor: pointer;
}

.ticket__create {
  margin-left: var(--margin-out);
  align-self: flex-start;

  font-size: 1.5rem;
  background-color: var(--bg-0);
  border-radius: 30px;
  position: relative;
  align-items: center;
  justify-content: space-between;
}

.ticket__button--faq {
  background-color: var(--primary);
  color: var(--bg-0);
  display: flex;
  justify-content: center;
  text-align: center;
}

.ticket__progress {
  height: 30px;
  width: 30px;
  border-radius: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.ticket__progress--0 {
  color: green;
}

.ticket__progress--0 > * {
  height: 30px;
  width: 30px;
}

.ticket__progress--1 {
  background-color: yellow;
}

.ticket__progress--1 > svg {
  height: 24px;
  width: 24px;
}

.ticket__box {
  background-color: var(--bg-0);
  border-radius: 30px;
  padding: 15px 20px;
  position: relative;
  top: -50px;
  margin-bottom: -50px;
}

.ticket_box_container {
  color: var(--text-100);
  border-radius: 30px;
  display: flex;
  flex-direction: column;
  margin-bottom: 1.5rem;
}

.ticket_answer_box {
  display: flex;
  flex-direction: column;
  background-color: var(--bg-100);
  border-radius: 0 0 30px 30px;
  padding: 0 1rem 1rem 1rem;
  padding-top: 1.75rem;
  margin-top: -1.75rem;
  position: relative;
  font-size: 1.2rem;
  z-index: 0;
  transition: all 0.3s;

  height: auto;
}

.ticket__box--close {
  height: 0%;
  display: none;
}

.ticket__box--close > * {
  height: 0%;
  display: none;
}

.ticket__button__text {
  margin-left: 1rem;
  color: var(--text-100);
}

.ticket__question,
.ticket__answer {
  margin-top: 1rem;
  color: var(--text-100);
}

.ticket__question {
  margin-top: 50px;
}

.ticket__question > b,
.ticket__answer > b {
  margin-right: 0.5rem;
}

.ticket__question > b,
.ticket__answer > b {
  margin-right: 0.5rem;
}

.ticket_checkicon {
  margin-right: 1rem;
  border-radius: 100%;
  display: flex;
  color: green;
}

.ticket__progressicon {
  margin-right: 1rem;
  border-radius: 100%;
  background-color: yellow;
  color: white;
  display: flex;
}

